added filament-peek and more On branch tiago-v1.x Your branch is up to date with 'origin/tiago-v1.x'.
Changes to be committed:
	modified:   app/Filament/Resources/PostResource/Pages/EditPost.php
	modified:   composer.json
	modified:   composer.lock
	new file:   config/filament-peek.php
	modified:   config/filament-spatie-laravel-activitylog.php
	modified:   lang/pt_BR/resources.php

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-permission": "^5.4",
         "stijnvanouplines/blade-country-flags": "^1.0",
-        "symfony/thanks": "^1.2"
+        "symfony/thanks": "^1.2",
+        "pboivin/filament-peek": "^0.2.1",
+        "solution-forest/filament-tree": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
